--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "babel-jest": "^27.4.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest": "^27.4.3",
     "joi": "^17.5.0",
     "pg": "^8.7.1"
   },
@@ -28,7 +32,6 @@
     "eslint-plugin-import": "^2.25.3",
     "faker": "^5.5.3",
     "husky": "^7.0.4",
-    "jest": "^27.4.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0"
   }
